@@ -1,0 +1,45 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+	<!-- Vision ZD2301 Multisensor 4in1 -->
+	<CommandClass id="112">
+		<Value type="list" genre="config"  index="1" label="Temperature unity" size="1" min="0" max="1" value="0">
+			<Help></Help>
+			<Item label="Celsius" value="0" />
+			<Item label="Fahrenheit" value="1" />
+		</Value>
+        <Value type="byte" genre="config" instance="1" index="2" label="Temperature Reporting Threshold" min="1" max="50" value="1">
+            <Help>Threshold change in temperature to induce an automatic report.
+            1 to 50 ( Set up from 0.1C to 5C)
+            </Help>
+        </Value>
+        <Value type="byte" genre="config" instance="1" index="3" label="Humidity Reporting Threshold" units="%" min="1" max="50" value="10">
+            <Help>Threshold change in humidity to induce an automatic report.
+            1 to 50 ( Set up from 1%-50%)
+            </Help>
+        </Value>
+        <Value type="byte" genre="config" instance="1" index="4" label="Luminance Reporting Threshold" units="%" min="0" max="50" value="10">
+            <Help>
+                Threshold change in luminance to induce an automatic report.
+                0 is disabled.
+                5 to 50 ( Set up from 5%-50%)
+            </Help>
+        </Value>
+
+    </CommandClass>
+
+	<!-- COMMAND_CLASS_BASIC -->
+	<CommandClass id="32" setasreport="true"/>
+
+    <!-- COMMAND_CLASS_ALARM AlarmCmd_Get responds with an undocumented value -->
+    <CommandClass id="113" getsupported="false" />
+
+    <!-- COMMAND_CLASS_SENSOR_BINARY Get responds with an undocumented value -->
+    <CommandClass id="30" getsupported="false" />
+
+	<!-- COMMAND_CLASS_ASSOCIATION -->
+	<CommandClass id="133">
+		<Associations num_groups="1">
+			<Group index="1" max_associations="5" label="Lifeline"/>
+		</Associations>
+	</CommandClass>
+</Product>
