@@ -126,6 +126,7 @@ Version 1.5
  - Pull Request #1023 - Add product type for ZXT-120US from daradib (Nechry)
  - Pull Request #1024 - Added new device, zooz zse09 from DeviantEng (Nechry)
  - Add CT30 Thermostat config file (Nechry)
+ - Add ZD2301 Multisensor 4in1 (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
